使用 Colaboratory 建立

--- a/20220709_Python人工智慧應用班.ipynb
+++ b/20220709_Python人工智慧應用班.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220709-Python人工智慧應用班",
       "provenance": [],
-      "authorship_tag": "ABX9TyO4laoagBU77dY1O1iqFSjc",
+      "authorship_tag": "ABX9TyPobyEpf4d1Z7EmSmNOF0Nq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,19 +33,28 @@
         "##初學者需要知道的概念\n",
         "###資料型態\n",
         " •int==>整數(0,1,2,...)\n",
+        "\n",
         " •float==>浮點數(3.14,1.1,...)\n",
+        "\n",
         " •bool==>布林變數(True,False)\n",
+        "\n",
         " •str==>字串\n",
         "###容器型別\n",
-        " •list==〉串列[]\n",
-        " •tuple==〉元組()\n",
-        " •dict==〉字典{}\n",
-        " •set==〉集合{}\n",
+        " •list==〉串列[ ]\n",
+        "\n",
+        " •tuple==〉元組( )\n",
+        "\n",
+        " •dict==〉字典{ }\n",
+        "\n",
+        " •set==〉集合{ }\n",
         "###基礎語法\n",
-        " *loops==〉\n",
-        " *functions==〉\n",
-        " *if statements==〉\n",
-        " *exception handling==〉"
+        " •loops==〉\n",
+        "\n",
+        " •functions==〉\n",
+        "\n",
+        " •if statements==〉\n",
+        "\n",
+        " •exception handling==〉\n"
       ],
       "metadata": {
         "id": "LHimHF3wgcp0"
