使用 Colaboratory 建立

--- a/20220709_Python人工智慧應用班.ipynb
+++ b/20220709_Python人工智慧應用班.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220709-Python人工智慧應用班",
       "provenance": [],
-      "authorship_tag": "ABX9TyPobyEpf4d1Z7EmSmNOF0Nq",
+      "authorship_tag": "ABX9TyM+dJsSG4jC1nVQkvV7kdrh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "\n",
         " •bool==>布林變數(True,False)\n",
         "\n",
-        " •str==>字串\n",
+        " •str==>字串(\"dog\",\"cat\",...)\n",
         "###容器型別\n",
         " •list==〉串列[ ]\n",
         "\n",
@@ -48,13 +48,13 @@
         "\n",
         " •set==〉集合{ }\n",
         "###基礎語法\n",
-        " •loops==〉\n",
+        " •loops==〉迴圈\n",
         "\n",
-        " •functions==〉\n",
+        " •functions==〉函式\n",
         "\n",
-        " •if statements==〉\n",
+        " •if statements==〉條件式\n",
         "\n",
-        " •exception handling==〉\n"
+        " •exception handling==〉例外處理\n"
       ],
       "metadata": {
         "id": "LHimHF3wgcp0"
