使用 Colaboratory 建立

--- a/20220709_Python人工智慧應用班.ipynb
+++ b/20220709_Python人工智慧應用班.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220709-Python人工智慧應用班",
       "provenance": [],
-      "authorship_tag": "ABX9TyOgwUTyJAaEFpyIjOD2b/RM",
+      "authorship_tag": "ABX9TyN4392Q2tSL+qOgQNo2dWm1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -144,11 +144,11 @@
         "print(\"程式區塊結束\")"
       ],
       "metadata": {
-        "id": "-IId9EfotBA9",
-        "outputId": "e4859b67-f07a-435d-956e-250ebe7b2205",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-IId9EfotBA9",
+        "outputId": "e4859b67-f07a-435d-956e-250ebe7b2205"
       },
       "execution_count": 13,
       "outputs": [
@@ -176,11 +176,11 @@
         "   print(i,\"x\",j)"
       ],
       "metadata": {
-        "id": "AbLNRDcZrIkV",
-        "outputId": "8ed4ea51-8165-40c1-d6bb-45cdd971e7a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AbLNRDcZrIkV",
+        "outputId": "8ed4ea51-8165-40c1-d6bb-45cdd971e7a2"
       },
       "execution_count": 11,
       "outputs": [
@@ -344,6 +344,59 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##方法二"
+      ],
+      "metadata": {
+        "id": "wMOYYtOsuEVs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "我想要印出九九乘法表"
+      ],
+      "metadata": {
+        "id": "nka-W9twuMWc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#條件式（if statements)\n",
+        "基本語法：\n",
+        "\n",
+        "語法一：\n",
+        "使用條件來決定程定區塊是否執行。\n",
+        "...python\n",
+        "if 條件式：\n",
+        " 程式區塊\n",
+        "...\n",
+        "\n",
+        "語法二：\n",
+        "使用條件式來決定執行程式區塊1還是程式區塊2。\n",
+        "...python\n",
+        "if 條件式：\n",
+        " 程式區塊1\n",
+        "else:\n",
+        " 程式區塊2\n",
+        "...\n",
+        "\n",
+        "語法三：\n",
+        "使用條件式來決定執行程式區塊1,程式區塊2還是程式區塊3。\n",
+        "...python\n",
+        "if 條件式：\n",
+        " 程式區塊1\n",
+        "else:\n",
+        " 程式區塊2\n",
+        "..."
+      ],
+      "metadata": {
+        "id": "tVNdnBqpuXD0"
+      }
     }
   ]
 }
