使用 Colaboratory 建立

--- a/20220709_Python人工智慧應用班.ipynb
+++ b/20220709_Python人工智慧應用班.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220709-Python人工智慧應用班",
       "provenance": [],
-      "authorship_tag": "ABX9TyN4392Q2tSL+qOgQNo2dWm1",
+      "authorship_tag": "ABX9TyPb6u7WcmKW327fywy1ySfu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -371,28 +371,49 @@
         "\n",
         "語法一：\n",
         "使用條件來決定程定區塊是否執行。\n",
+        "\n",
         "...python\n",
+        "\n",
         "if 條件式：\n",
+        "\n",
         " 程式區塊\n",
+        "\n",
         "...\n",
+        "\n",
         "\n",
         "語法二：\n",
         "使用條件式來決定執行程式區塊1還是程式區塊2。\n",
+        "\n",
         "...python\n",
+        "\n",
         "if 條件式：\n",
+        "\n",
         " 程式區塊1\n",
+        "\n",
         "else:\n",
+        "\n",
         " 程式區塊2\n",
+        "\n",
         "...\n",
         "\n",
         "語法三：\n",
         "使用條件式來決定執行程式區塊1,程式區塊2還是程式區塊3。\n",
+        "\n",
         "...python\n",
+        "\n",
         "if 條件式：\n",
+        "\n",
         " 程式區塊1\n",
+        "\n",
         "else:\n",
+        "\n",
         " 程式區塊2\n",
-        "..."
+        "\n",
+        "else:\n",
+        "\n",
+        " 程式區塊3\n",
+        "\n",
+        "...\n"
       ],
       "metadata": {
         "id": "tVNdnBqpuXD0"
