使用 Colaboratory 建立

--- a/20220709_Python人工智慧應用班.ipynb
+++ b/20220709_Python人工智慧應用班.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220709-Python人工智慧應用班",
       "provenance": [],
-      "authorship_tag": "ABX9TyPb6u7WcmKW327fywy1ySfu",
+      "authorship_tag": "ABX9TyOSVhp42nbF7raGIVwIAHv2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,9 +367,9 @@
       "cell_type": "markdown",
       "source": [
         "#條件式（if statements)\n",
-        "基本語法：\n",
+        "##基本語法：\n",
         "\n",
-        "語法一：\n",
+        "###語法一：\n",
         "使用條件來決定程定區塊是否執行。\n",
         "\n",
         "...python\n",
@@ -379,45 +379,183 @@
         " 程式區塊\n",
         "\n",
         "...\n",
-        "\n",
-        "\n",
-        "語法二：\n",
-        "使用條件式來決定執行程式區塊1還是程式區塊2。\n",
-        "\n",
-        "...python\n",
-        "\n",
-        "if 條件式：\n",
-        "\n",
-        " 程式區塊1\n",
-        "\n",
-        "else:\n",
-        "\n",
-        " 程式區塊2\n",
-        "\n",
-        "...\n",
-        "\n",
-        "語法三：\n",
-        "使用條件式來決定執行程式區塊1,程式區塊2還是程式區塊3。\n",
-        "\n",
-        "...python\n",
-        "\n",
-        "if 條件式：\n",
-        "\n",
-        " 程式區塊1\n",
-        "\n",
-        "else:\n",
-        "\n",
-        " 程式區塊2\n",
-        "\n",
-        "else:\n",
-        "\n",
-        " 程式區塊3\n",
-        "\n",
-        "...\n"
+        "\n"
       ],
       "metadata": {
         "id": "tVNdnBqpuXD0"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=3\n",
+        "b=2\n",
+        "if a>b:\n",
+        "  print(\"a>b\")\n"
+      ],
+      "metadata": {
+        "id": "NU_OyMLPwh1V",
+        "outputId": "cfd11029-16bb-4ec6-9463-c40bb15cdeed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a>b\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###語法二： 使用條件式來決定執行程式區塊1還是程式區塊2。\n",
+        "\n",
+        "...python\n",
+        "\n",
+        "if 條件式：\n",
+        "\n",
+        "程式區塊1\n",
+        "\n",
+        "else:\n",
+        "\n",
+        "程式區塊2\n",
+        "\n",
+        "...\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "483fjoDkxFiU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###語法三： 使用條件式來決定執行程式區塊1,程式區塊2還是程式區塊3。\n",
+        "\n",
+        "...python\n",
+        "\n",
+        "if 條件式：\n",
+        "\n",
+        "程式區塊1\n",
+        "\n",
+        "elif:\n",
+        "\n",
+        "程式區塊2\n",
+        "\n",
+        "else:\n",
+        "\n",
+        "程式區塊3\n",
+        "\n",
+        "..."
+      ],
+      "metadata": {
+        "id": "X3oi2WTRxRJk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=2\n",
+        "b=2\n",
+        "if a>b:\n",
+        "  print(\"a>b\")\n",
+        "elif a<b:\n",
+        "  print(\"a<b\")\n",
+        "else:\n",
+        "  print(\"a=b\")\n"
+      ],
+      "metadata": {
+        "id": "ifo0aQ2dxk6D",
+        "outputId": "590a2577-13cf-4263-af45-cae1a421d5d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a=b\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##練習\n",
+        "請計算bmi並判斷體位\n",
+        "\n",
+        "$$bmi"
+      ],
+      "metadata": {
+        "id": "rG9qsfJ3ywdL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weight=80\n",
+        "height=1.83\n",
+        "bmi=80/(1.83**2)\n",
+        "bmi"
+      ],
+      "metadata": {
+        "id": "2m2yMtgCzi-B",
+        "outputId": "f46881c2-1a44-4b27-b001-bce91a9c8d5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23.888440980620498"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if bmi<18:\n",
+        "  print(\"體重過輕\")\n",
+        "elif bmi>24:\n",
+        "  print(\"體重過重\")\n",
+        "else:\n",
+        "  print(\"健康體位\")"
+      ],
+      "metadata": {
+        "id": "sSAPum7G0Bu8",
+        "outputId": "7fa96b2b-6751-4892-8af6-550a75fb851c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "健康體位\n"
+          ]
+        }
+      ]
     }
   ]
 }
