--- a/20220709_Python人工智慧應用班.ipynb
+++ b/20220709_Python人工智慧應用班.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220709-Python人工智慧應用班",
       "provenance": [],
-      "authorship_tag": "ABX9TyP3pF94ZDtMLhjbCAF8YTSX",
+      "authorship_tag": "ABX9TyOr1282KEm6W19M9Ik6Di+j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -374,11 +374,11 @@
         "  print(i)"
       ],
       "metadata": {
-        "id": "wGbIILdM-Cb4",
-        "outputId": "5117b79c-9889-41e6-cb4d-f3043e987edf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wGbIILdM-Cb4",
+        "outputId": "5117b79c-9889-41e6-cb4d-f3043e987edf"
       },
       "execution_count": 34,
       "outputs": [
@@ -401,11 +401,11 @@
         "list(range(5))"
       ],
       "metadata": {
-        "id": "Lmknx_Nc-Gro",
-        "outputId": "45d0755e-4c48-4b56-ddec-6fc696ceac04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Lmknx_Nc-Gro",
+        "outputId": "45d0755e-4c48-4b56-ddec-6fc696ceac04"
       },
       "execution_count": 35,
       "outputs": [
@@ -427,11 +427,11 @@
         "list(range(2, 10))"
       ],
       "metadata": {
-        "id": "UdScYgeo-K73",
-        "outputId": "e8def7d7-cfd0-411d-9992-7dadcee17a78",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UdScYgeo-K73",
+        "outputId": "e8def7d7-cfd0-411d-9992-7dadcee17a78"
       },
       "execution_count": 36,
       "outputs": [
@@ -454,11 +454,11 @@
         "  print(i)"
       ],
       "metadata": {
-        "id": "bMXr84Zk-PkO",
-        "outputId": "1331d057-0111-4044-8145-23a123fb5aa2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bMXr84Zk-PkO",
+        "outputId": "1331d057-0111-4044-8145-23a123fb5aa2"
       },
       "execution_count": 37,
       "outputs": [
@@ -487,11 +487,11 @@
         "    print(i, \"x\", j)"
       ],
       "metadata": {
-        "id": "fVDDXnYb-U-n",
-        "outputId": "ef59a9d7-ed07-4046-f71b-262065f873e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fVDDXnYb-U-n",
+        "outputId": "ef59a9d7-ed07-4046-f71b-262065f873e1"
       },
       "execution_count": 38,
       "outputs": [
@@ -575,11 +575,11 @@
         "    print(i, \"x\", j, \"=\", i*j)"
       ],
       "metadata": {
-        "id": "VTs6640P-XMs",
-        "outputId": "6b9afa87-215d-406a-d041-91b5ab90c618",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VTs6640P-XMs",
+        "outputId": "6b9afa87-215d-406a-d041-91b5ab90c618"
       },
       "execution_count": 39,
       "outputs": [
@@ -687,11 +687,11 @@
         "  i = i + 1"
       ],
       "metadata": {
-        "id": "IiiwEPCz7MJY",
-        "outputId": "fb1dc979-bc2e-457e-b14f-fee156338c77",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IiiwEPCz7MJY",
+        "outputId": "fb1dc979-bc2e-457e-b14f-fee156338c77"
       },
       "execution_count": 40,
       "outputs": [
@@ -723,11 +723,11 @@
         "  i = i + 1"
       ],
       "metadata": {
-        "id": "X8h4A41e-fKg",
-        "outputId": "cc4f9c67-f41d-4968-f3fa-b4a2a10d356b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X8h4A41e-fKg",
+        "outputId": "cc4f9c67-f41d-4968-f3fa-b4a2a10d356b"
       },
       "execution_count": 41,
       "outputs": [
@@ -1029,11 +1029,11 @@
         "health1(80, 1.83)"
       ],
       "metadata": {
-        "id": "Xz7FMIMj53_L",
-        "outputId": "c7ef80b8-9e43-405d-ad5f-a88e3196ee91",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Xz7FMIMj53_L",
+        "outputId": "c7ef80b8-9e43-405d-ad5f-a88e3196ee91"
       },
       "execution_count": 24,
       "outputs": [
@@ -1070,12 +1070,12 @@
         "health2(80, 1.83)"
       ],
       "metadata": {
-        "id": "BGh23pmo6GU5",
-        "outputId": "997efb59-a7e5-49f1-e720-939917712cdb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "BGh23pmo6GU5",
+        "outputId": "997efb59-a7e5-49f1-e720-939917712cdb"
       },
       "execution_count": 26,
       "outputs": [
@@ -1101,11 +1101,11 @@
         "y = health2(80, 1.83)"
       ],
       "metadata": {
-        "id": "6793y5HO6Mf2",
-        "outputId": "2a60f2e8-fa7e-4a56-9720-bf031d75cda9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6793y5HO6Mf2",
+        "outputId": "2a60f2e8-fa7e-4a56-9720-bf031d75cda9"
       },
       "execution_count": 27,
       "outputs": [
@@ -1125,11 +1125,11 @@
         "print(x)"
       ],
       "metadata": {
-        "id": "6-Fuj-Z76TAf",
-        "outputId": "7d80a550-a606-45b5-e0e3-6b2b72a113a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6-Fuj-Z76TAf",
+        "outputId": "7d80a550-a606-45b5-e0e3-6b2b72a113a6"
       },
       "execution_count": 30,
       "outputs": [
@@ -1148,11 +1148,11 @@
         "print(y)"
       ],
       "metadata": {
-        "id": "JNcgsA0W6XBg",
-        "outputId": "680c3f0f-f270-4437-e35b-85289af25879",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JNcgsA0W6XBg",
+        "outputId": "680c3f0f-f270-4437-e35b-85289af25879"
       },
       "execution_count": 29,
       "outputs": [
@@ -1173,11 +1173,11 @@
         "x=input(\"請輸入資料\")"
       ],
       "metadata": {
-        "id": "IBl7oUcs7YHh",
-        "outputId": "2ec0b4d2-6ed7-4c4d-ff3c-b494f99296c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IBl7oUcs7YHh",
+        "outputId": "2ec0b4d2-6ed7-4c4d-ff3c-b494f99296c5"
       },
       "execution_count": 31,
       "outputs": [
@@ -1196,12 +1196,12 @@
         "x\n"
       ],
       "metadata": {
-        "id": "QFMWxCZa7jJv",
-        "outputId": "0962993c-df79-4e77-c59f-b846b455fefe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "QFMWxCZa7jJv",
+        "outputId": "0962993c-df79-4e77-c59f-b846b455fefe"
       },
       "execution_count": 32,
       "outputs": [
@@ -1229,12 +1229,12 @@
         "health2(float(w), float(h))"
       ],
       "metadata": {
-        "id": "IGu1VXIh8gkg",
-        "outputId": "4c394926-d899-4acf-8564-f7d3c5bd59d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        }
+        },
+        "id": "IGu1VXIh8gkg",
+        "outputId": "4c394926-d899-4acf-8564-f7d3c5bd59d1"
       },
       "execution_count": 33,
       "outputs": [
@@ -1258,6 +1258,334 @@
           },
           "metadata": {},
           "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Gradio使用簡介"
+      ],
+      "metadata": {
+        "id": "__R0CVMr_0E-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install gradio"
+      ],
+      "metadata": {
+        "id": "Mz8gxVNXAIc_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet(name):\n",
+        "  return \"Hello \" + name + \"!\"\n",
+        "\n",
+        "greet(\"World\")"
+      ],
+      "metadata": {
+        "id": "kZGF9-y-Ai1m",
+        "outputId": "da0613f6-a955-4738-dc82-97cc609c4c88",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hello World!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import gradio"
+      ],
+      "metadata": {
+        "id": "TYp9XvO-A8Fu"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gradio.Interface(greet, \"text\", \"text\",title=\"打招呼\").launch(share=True)"
+      ],
+      "metadata": {
+        "id": "H1ZKefoUA_4u",
+        "outputId": "2e59c08c-5d44-40f9-d83c-da35c4ada171",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 643
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
+            "Running on public URL: https://40793.gradio.app\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting, check out Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://40793.gradio.app\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<gradio.routes.App at 0x7f6ab4a00dd0>,\n",
+              " 'http://127.0.0.1:7861/',\n",
+              " 'https://40793.gradio.app')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def health2(w, h):\n",
+        "  bmi = float(w)/(float(h)**2)\n",
+        "  if bmi < 18:\n",
+        "    return \"體重過輕\"\n",
+        "  elif bmi > 24:\n",
+        "    return \"體重過重\"\n",
+        "  else:\n",
+        "    return \"健康體位\""
+      ],
+      "metadata": {
+        "id": "tsnDWRgHC6LG"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gradio.Interface(health2, [\"text\",\"text\"], \"text\", title=\"判斷體位狀況\").launch(share=True)"
+      ],
+      "metadata": {
+        "id": "mTVd3oLLDGbe",
+        "outputId": "f0275ea4-aef6-4788-de7e-e139d06e7386",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 643
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
+            "Running on public URL: https://14750.gradio.app\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting, check out Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://14750.gradio.app\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<gradio.routes.App at 0x7f6ab49964d0>,\n",
+              " 'http://127.0.0.1:7862/',\n",
+              " 'https://14750.gradio.app')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def health3(w, h):\n",
+        "  bmi = float(w)/(float(h)**2)\n",
+        "  if bmi < 18:\n",
+        "    return bmi, \"體重過輕\"\n",
+        "  elif bmi > 24:\n",
+        "    return bmi, \"體重過重\"\n",
+        "  else:\n",
+        "    return bmi, \"健康體位\""
+      ],
+      "metadata": {
+        "id": "EEIex7okG4Wt"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gradio.Interface(health3, [\"text\",\"text\"], [\"text\",\"text\"], title=\"判斷體位狀況\").launch(share=True)"
+      ],
+      "metadata": {
+        "id": "FD3ahbScF7Lm",
+        "outputId": "0a93161a-231e-4e1a-897e-5c427158527f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 643
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
+            "Running on public URL: https://22072.gradio.app\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting, check out Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://22072.gradio.app\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<gradio.routes.App at 0x7f6ab755ff10>,\n",
+              " 'http://127.0.0.1:7863/',\n",
+              " 'https://22072.gradio.app')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests"
+      ],
+      "metadata": {
+        "id": "02iObGgsHsi4"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def lookup(word):\n",
+        "  url = f\"https://www.moedict.tw/uni/{word}\"\n",
+        "  return requests.get(url).json()"
+      ],
+      "metadata": {
+        "id": "ttBp8X9lHuGH"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gradio.Interface(lookup, \"text\", \"text\", title=\"萌典API使用範例\").launch(share=True)"
+      ],
+      "metadata": {
+        "id": "4mHwRgL_Hz45",
+        "outputId": "59c78d5f-043e-4ad6-a1a4-8c43ec75155d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 643
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
+            "Running on public URL: https://54755.gradio.app\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting, check out Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://54755.gradio.app\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<gradio.routes.App at 0x7f6ab75f6350>,\n",
+              " 'http://127.0.0.1:7864/',\n",
+              " 'https://54755.gradio.app')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
         }
       ]
     }
