使用 Colaboratory 建立

--- a/20220709_Python人工智慧應用班.ipynb
+++ b/20220709_Python人工智慧應用班.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220709-Python人工智慧應用班",
       "provenance": [],
-      "authorship_tag": "ABX9TyOr1282KEm6W19M9Ik6Di+j",
+      "authorship_tag": "ABX9TyNjUd0MW4dSrneyWCv6Ogg1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1290,12 +1290,12 @@
         "greet(\"World\")"
       ],
       "metadata": {
-        "id": "kZGF9-y-Ai1m",
-        "outputId": "da0613f6-a955-4738-dc82-97cc609c4c88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "kZGF9-y-Ai1m",
+        "outputId": "da0613f6-a955-4738-dc82-97cc609c4c88"
       },
       "execution_count": 43,
       "outputs": [
@@ -1331,12 +1331,12 @@
         "gradio.Interface(greet, \"text\", \"text\",title=\"打招呼\").launch(share=True)"
       ],
       "metadata": {
-        "id": "H1ZKefoUA_4u",
-        "outputId": "2e59c08c-5d44-40f9-d83c-da35c4ada171",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 643
-        }
+        },
+        "id": "H1ZKefoUA_4u",
+        "outputId": "2e59c08c-5d44-40f9-d83c-da35c4ada171"
       },
       "execution_count": 47,
       "outputs": [
@@ -1400,12 +1400,12 @@
         "gradio.Interface(health2, [\"text\",\"text\"], \"text\", title=\"判斷體位狀況\").launch(share=True)"
       ],
       "metadata": {
-        "id": "mTVd3oLLDGbe",
-        "outputId": "f0275ea4-aef6-4788-de7e-e139d06e7386",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 643
-        }
+        },
+        "id": "mTVd3oLLDGbe",
+        "outputId": "f0275ea4-aef6-4788-de7e-e139d06e7386"
       },
       "execution_count": 49,
       "outputs": [
@@ -1469,12 +1469,12 @@
         "gradio.Interface(health3, [\"text\",\"text\"], [\"text\",\"text\"], title=\"判斷體位狀況\").launch(share=True)"
       ],
       "metadata": {
-        "id": "FD3ahbScF7Lm",
-        "outputId": "0a93161a-231e-4e1a-897e-5c427158527f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 643
-        }
+        },
+        "id": "FD3ahbScF7Lm",
+        "outputId": "0a93161a-231e-4e1a-897e-5c427158527f"
       },
       "execution_count": 53,
       "outputs": [
@@ -1544,12 +1544,12 @@
         "gradio.Interface(lookup, \"text\", \"text\", title=\"萌典API使用範例\").launch(share=True)"
       ],
       "metadata": {
-        "id": "4mHwRgL_Hz45",
-        "outputId": "59c78d5f-043e-4ad6-a1a4-8c43ec75155d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 643
-        }
+        },
+        "id": "4mHwRgL_Hz45",
+        "outputId": "59c78d5f-043e-4ad6-a1a4-8c43ec75155d"
       },
       "execution_count": 56,
       "outputs": [
@@ -1586,6 +1586,74 @@
           },
           "metadata": {},
           "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests"
+      ],
+      "metadata": {
+        "id": "68Keb9NagNR5"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = \"https://victorgau.github.io/khpy_web_intro/html_only.html\""
+      ],
+      "metadata": {
+        "id": "uhmUEFA-gQcl"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "r = requests.get(url)"
+      ],
+      "metadata": {
+        "id": "ET2fjAoUgU2e"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(r.text)"
+      ],
+      "metadata": {
+        "id": "JFhkcbZ9gavX",
+        "outputId": "6a884c58-d1f7-4f4b-eaec-29c187ac39eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<!DOCTYPE html>\n",
+            "<html>\n",
+            "<head>\n",
+            "    <title>HTML範例</title>\n",
+            "</head>\n",
+            "<body>\n",
+            "\n",
+            "<h1>哈囉！HTML！</h1>\n",
+            "\n",
+            "<img src=\"ninja.jpg\" />\n",
+            "\n",
+            "</body>\n",
+            "</html>\n"
+          ]
         }
       ]
     }
