使用 Colaboratory 建立

--- a/20220709_Python人工智慧應用班.ipynb
+++ b/20220709_Python人工智慧應用班.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220709-Python人工智慧應用班",
       "provenance": [],
-      "authorship_tag": "ABX9TyNjUd0MW4dSrneyWCv6Ogg1",
+      "authorship_tag": "ABX9TyMPHxeGjyWx1ywhZrIl//4L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1628,11 +1628,11 @@
         "print(r.text)"
       ],
       "metadata": {
-        "id": "JFhkcbZ9gavX",
-        "outputId": "6a884c58-d1f7-4f4b-eaec-29c187ac39eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JFhkcbZ9gavX",
+        "outputId": "6a884c58-d1f7-4f4b-eaec-29c187ac39eb"
       },
       "execution_count": 60,
       "outputs": [
@@ -1654,6 +1654,299 @@
             "</body>\n",
             "</html>\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(r)"
+      ],
+      "metadata": {
+        "id": "tbeSW2glhGfl",
+        "outputId": "aabdcabf-9e51-41f0-ecad-dc9830dd3050",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "requests.models.Response"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "r.request.headers"
+      ],
+      "metadata": {
+        "id": "awc-MGOVhQXF",
+        "outputId": "3029a2a5-ddbf-4b19-f723-0035f2f48acf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'User-Agent': 'python-requests/2.23.0', 'Accept-Encoding': 'gzip, deflate', 'Accept': '*/*', 'Connection': 'keep-alive'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f=open(\"index.html\",\"w\")\n",
+        "f.write(r.text)\n",
+        "f.close()"
+      ],
+      "metadata": {
+        "id": "pEZouXsMhuCG"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## json v.s. dict/list 差別"
+      ],
+      "metadata": {
+        "id": "gCwlPSHjmBO8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = {}"
+      ],
+      "metadata": {
+        "id": "JeMwkebUmGR8"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d['cat'] = \"貓咪\""
+      ],
+      "metadata": {
+        "id": "OeVH5JdhmI-u"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d['dog'] = \"狗狗\""
+      ],
+      "metadata": {
+        "id": "dyBBIuQAmMFm"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d"
+      ],
+      "metadata": {
+        "id": "4T90tfigmPFY",
+        "outputId": "5fba764f-155b-42d9-e19a-c0514ebc96b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'cat': '貓咪', 'dog': '狗狗'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(d)"
+      ],
+      "metadata": {
+        "id": "8vyFsETpmTZd",
+        "outputId": "49f7a3dc-42c9-452f-cf16-7b235a385a40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e = '{\"cat\": \"貓咪\", \"dog\": \"狗狗\"}'"
+      ],
+      "metadata": {
+        "id": "yEuuh8jmmeS8"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(e)"
+      ],
+      "metadata": {
+        "id": "_pt9RKj-mf1J",
+        "outputId": "a7701f10-83e8-4e8f-89fc-7385cc58b680",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(e)"
+      ],
+      "metadata": {
+        "id": "R926paFnmmOm",
+        "outputId": "43cc8784-5935-4a63-89a2-0218b808fb43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'cat': '貓咪', 'dog': '狗狗'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json"
+      ],
+      "metadata": {
+        "id": "BObJta8om6_F"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f = json.loads(e)"
+      ],
+      "metadata": {
+        "id": "jF3HZWDKntna"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(f)"
+      ],
+      "metadata": {
+        "id": "nEsixym6n0R5",
+        "outputId": "b705e122-e541-4c19-ff8e-0d073bb7b27d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f"
+      ],
+      "metadata": {
+        "id": "MQPcBRDRn3As",
+        "outputId": "be00738c-b980-4087-fda6-58abeec732e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'cat': '貓咪', 'dog': '狗狗'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
         }
       ]
     }
