--- a/20220716.ipynb
+++ b/20220716.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220716.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/2P5CuhUEbPelYULS92f1",
+      "authorship_tag": "ABX9TyOssxRumFqUqghttt33LVhK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,6 +164,66 @@
           "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 註冊 ZeroJudge\n",
+        "\n",
+        "https://zerojudge.tw/\n",
+        "\n",
+        "解解看底下題目：\n",
+        "* https://zerojudge.tw/ShowProblem?problemid=a002\n",
+        "* https://zerojudge.tw/ShowProblem?problemid=a003"
+      ],
+      "metadata": {
+        "id": "d7JRVVnQn0zf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 資料分析簡介\n",
+        "* Numpy\n",
+        "  * Numerical Python\n",
+        "  * 科學運算基礎套件\n",
+        "* MatPlotLib\n",
+        "  * Matrix Plotting Library\n",
+        "  * 繪圖基礎套件\n",
+        "* Pandas\n",
+        "  * Panel Data\n",
+        "  * 資料分析基礎套件"
+      ],
+      "metadata": {
+        "id": "D8Da4Es2oADf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```python\n",
+        "import numpy as np【別名】\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "oN-8jvWZquQk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Numpy\n",
+        "\n",
+        "* new data type\n",
+        "  * ndarray => Multi-Dimentional Array\n",
+        "* new functions to process data\n",
+        "  * ufunc => Universal Functions"
+      ],
+      "metadata": {
+        "id": "EcW36FzrqVUf"
+      }
     }
   ]
 }
